Added a popup window for selecting a map source, rather than having to type in something like hash:/etc/postfix/virtual . This source can be an LDAP or MySQL database on Postfix systems that support it, which will trigger the automatic creation of a configuration file if needed.
Maps in MySQL and LDAP databases can be viewed and edited in the same way that those in regular files are, if the appropriate Perl modules are installed (DBI and DBD::mysql for MySQL, or Net::LDAP for LDAP). This also applies to email aliases.
---- Changes since 1.380 ----
Fixed a bug that prevented comments and manual map editing, and added back support for PCRE and BTREE maps.
Added a button for manually editing the aliases file.
Added more SMTP relaying restrictions.
---- Changes since 1.390 ----
Outgoing email from selected addresses and domains can now be BCCd automatically using the new BCC Mapping page.
---- Changes since 1.400 ----
Changed the default LDAP class for maps to inetLocalMailRecipient.
---- Changes since 1.410 ----
Added the SMTP Client Restrictions page, and replaced some oddly-designed UI fields on the SMTP Server Options page to it with more Webmin-standard inputs for configuring RBLs and client access.
Updated the BCC Mappings page to allow both sender and recipient maps to be defined and edited.
---- Changes since 1.420 ----
Properly handle multiple reject_rbl_client DNS domains on the SMTP Client Restrictions page.
---- Changes since 1.430 ----
Converted all pages to use the new Webmin UI library, for a more consistent and themable look.
Autoreply messages containing non-ASCII characters are now properly quoted-printable encoded.
---- Changes since 1.440 ----
Added a module config option to control if the user is prompted for confirmation before deleting queued messages.
---- Changes since 1.450 ----
Changed the mail queue date format to yyyy/mm/dd, for easier sorting.
---- Changes since 1.490 ----
Added support for the Postfix 2.3 smtpd_tls_security_level option.