@@ -66,3 +66,5 @@ Added a module config option to control if the user is prompted for confirmation
 Changed the mail queue date format to yyyy/mm/dd, for easier sorting.
 ---- Changes since 1.490 ----
 Added support for the Postfix 2.3 smtpd_tls_security_level option.
+Improved Postfix main.cf file parser to skip indented blank lines.
+Changed map deletion function to not remove expected line, which can otherwise cause file corruption.
